Add control buttons and clearCanvas function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <body>
     <div class="container">
       <div class="canvas"></div>
+      <div class="control-container">
+        <button class="button">Black</button>
+        <button class="button">Red</button>
+        <button class="button">Blue</button>
+        <button class="button">Green</button>
+        <button class="button">Clear</button>
+      </div>
     </div>
   </body>
 </html>
