Adjust button size and add new colours

--- a/index.html
+++ b/index.html
@@ -10,19 +10,41 @@
     <div class="container">
       <div class="canvas" draggable="false"></div>
       <div class="control-container">
-        <button class="button button--selected" id="black">
-          <div class="button__preview button__preview--black"></div>
-        </button>
-        <button class="button" id="red">
-          <div class="button__preview button__preview--red"></div>
-        </button>
-        <button class="button" id="blue">
-          <div class="button__preview button__preview--blue"></div>
-        </button>
-        <button class="button" id="green">
-          <div class="button__preview button__preview--green"></div>
-        </button>
-        <button class="button">Clear</button>
+        <div class="control-container control-container__subcontainer">
+          <button class="button button--selected" id="black">
+            <div class="button__preview button__preview--black"></div>
+          </button>
+          <button class="button" id="red">
+            <div class="button__preview button__preview--red"></div>
+          </button>
+          <button class="button" id="orange">
+            <div class="button__preview button__preview--orange"></div>
+          </button>
+          <button class="button" id="yellow">
+            <div class="button__preview button__preview--yellow"></div>
+          </button>          
+          <button class="button" id="green">
+            <div class="button__preview button__preview--green"></div>
+          </button> 
+          <button class="button" id="cyan">
+            <div class="button__preview button__preview--cyan"></div>
+          </button>                   
+          <button class="button" id="blue">
+            <div class="button__preview button__preview--blue"></div>
+          </button>
+          <button class="button" id="purple">
+            <div class="button__preview button__preview--purple"></div>
+          </button>
+          <button class="button" id="magenta">
+            <div class="button__preview button__preview--magenta"></div>
+          </button>
+          <button class="button" id="brown">
+            <div class="button__preview button__preview--brown"></div>
+          </button>
+        </div>
+        <div class = "control-container control-container__subcontainer">
+          <button class="button">Clear</button>
+        </div>  
       </div>
     </div>
   </body>
