Added eraser and resize buttons

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           </button>
         </div>
         <div class = "control-container control-container__subcontainer">
+          <button class="button">Eraser</button>
           <button class="button">Clear</button>
         </div>  
       </div>
