Add slider which adjusts canvas resolution

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <div class = "control-container control-container__subcontainer">
           <button class="button">Eraser</button>
           <button class="button">Clear</button>
+          <div class="control-container control-container__slider">
+            <label for="resolution-range">Resolution: <span id="resolution-value">32</span></label>
+            <input type="range" min="8" max="100" value="32" id="resolution-range">
+          </div>
         </div>  
       </div>
     </div>
