Add rainbow brush

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           </button>
         </div>
         <div class = "control-container control-container__subcontainer">
+          <button class="button" id="rainbow">
+            <div class="button__preview button__preview--rainbow"></div>
+          </button>
           <button class="button">Eraser</button>
           <button class="button">Clear</button>
           <div class="control-container control-container__slider">
