Adjust big button style selection highlighting

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           <button class="button button--selected" id="black">
             <div class="button__preview button__preview--black"></div>
           </button>
+          <button class="button" id="gray">
+            <div class="button__preview button__preview--gray"></div>
+          </button>
           <button class="button" id="red">
             <div class="button__preview button__preview--red"></div>
           </button>
@@ -23,6 +26,9 @@
           <button class="button" id="yellow">
             <div class="button__preview button__preview--yellow"></div>
           </button>          
+          <button class="button" id="limegreen">
+            <div class="button__preview button__preview--limegreen"></div>
+          </button> 
           <button class="button" id="green">
             <div class="button__preview button__preview--green"></div>
           </button> 
@@ -46,8 +52,8 @@
           <button class="button" id="rainbow">
             <div class="button__preview button__preview--rainbow"></div>
           </button>
-          <button class="button">Eraser</button>
-          <button class="button">Clear</button>
+          <button class="button button--big">Eraser</button>
+          <button class="button button--big">Clear</button>
           <div class="control-container control-container__slider">
             <label for="resolution-range">Resolution: <span id="resolution-value">32</span></label>
             <input type="range" min="8" max="100" value="32" id="resolution-range">
