Add transluscent black brush

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
           <button class="button" id="rainbow">
             <div class="button__preview button__preview--rainbow"></div>
           </button>
+          <button class="button" id="transluscent">
+            <div class="button__preview button__preview--transluscent"></div>
+          </button>
           <button class="button button--big">Eraser</button>
           <button class="button button--big">Clear</button>
           <div class="control-container control-container__slider">
